  - added lib/error_handler.php with hooks in freemed.php
  - set freemed_display_box_bottom to check for a box, as well as top, so
    that *those* errors are fixed
  - patient.php: fixed "Manage This Patient" link, and prettied up
    SQL output
  - lib/freemed.php: now needs phpwebtools 0.2.1, and version kept in
    seperate define
  - reports.php: prettier output (added font tags)

* Thu Mar 15 2001 fforest
  - lib/macros  new define for COPAY transaction
  - lib/module_edi code to remove slashes from data.
  - lib/render_forms added code to handle Numeric formating.
  - eoc module view was not displaying data due to missing global patient.
  - fixed_form module  fix bug in scrolling code. If changes were made
    to screen data the changes were not reflected in the hidden arrays.
  - highmark module. Added code to handle student status correctly. fixed bug
    auth validation to validate the auth dates to proc dates instead of current date.
    added pos to sql order and control break
  - payment module. added code to handle new COPAY transaction
  - procedure was not displaying default info from patient rec in both add and modform
  - many update to MSCI NSF generation for commercial carriers.

* Sat Mar 10 2001 fforest
  - billing_functions - all old links removed. everything is now
    modules.
  - patient.php added some ptempl options needed for edi. also
    automagically create the ptid using the new prefix in freemed.php
  - freemed.php added define (PATID_PREFIX, "PAT");
  - macros.php added MAXCOVTYPES 4 
  - fixed_forms modules. re written to work more like an editor and
    implemented scrolling. 
  - highmark_edi some bug fixes.
  - fixedform supplied data now contains 2 NSF forms.
  - add 2 NSF modules for billing. 1 for commercial and
    1 for medicare. Still not fully tested

* Tue Mar 02 2001 fforest
  - admin added new fields to phygroup to support groupids and physicians
  - updated supplied files containing X12 codes.